--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
    <h1>This is for testing git branching </h1>
    <h2>Master branch</h2>
+   <h3>I am adding this h3 to have more commits</h3>
 </body>
 </html>
