--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    <h1>This is for testing git branching </h1>
    <h2>Master branch</h2>
    <h3>I am adding this h3 to have more commits</h3>
+   <h3>This h3 is added for third commit </h3>
 </body>
 </html>
