--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <h1>This is for testing git branching </h1>
    <h2>Master branch</h2>
-   <h3 style="color:red">I am adding this h3 to have more commits</h3>
+   <h3 style="color:blue">I am adding this h3 to have more commits</h3>
    <h3>This h3 is added for third commit </h3>
 </body>
 </html>
