h3 and background style improved

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body style="background:rgb(228, 89, 89)">
    <h1>This is for testing git branching </h1>
    <h2>Master branch</h2>
-   <h3 style="color:blue">I am adding this h3 to have more commits</h3>
+   <h3 style="color:rgb(78, 78, 235)">I am adding this h3 to have more commits</h3>
    <h3>This h3 is added for third commit </h3>
 </body>
 </html>
